overflow fix

--- a/app/assets/stylesheets/grader.scss
+++ b/app/assets/stylesheets/grader.scss
@@ -269,7 +269,6 @@
 .annotation_options{
   display: block;
   float: left;
-  overflow: auto;
 }
 
 #file_download_button {
